// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and four - small 1`] = `
Array [
  <Text>
    lead
  </Text>,
  <View>
    <Text>
      support-1
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-2
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-4
    </Text>
  </View>,
]
`;

exports[`2. lead one and four - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 20,
      "paddingVertical": 5,
    }
  }
>
  <View
    style={
      Object {
        "width": "60%",
      }
    }
  >
    <Text>
      lead
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "40%",
      }
    }
  >
    <Text>
      support-1
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-2
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-4
    </Text>
  </View>
</View>
`;
